--- a/Zalo_Project01/Base.lproj/Main.storyboard
+++ b/Zalo_Project01/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ilZ-8W-4yP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
@@ -119,13 +119,56 @@
                     <view key="view" contentMode="scaleToFill" id="MKZ-qB-Rl8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imd-Do-Jjg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="89.5"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GpR-4J-YTo">
+                                <rect key="frame" x="0.0" y="89.5" width="414" height="717"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NJE-Ly-5JI">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="717"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="NJE-Ly-5JI" firstAttribute="top" secondItem="GpR-4J-YTo" secondAttribute="top" id="LSh-QI-jKn"/>
+                                    <constraint firstItem="NJE-Ly-5JI" firstAttribute="leading" secondItem="GpR-4J-YTo" secondAttribute="leading" id="TV5-fn-wN2"/>
+                                    <constraint firstAttribute="trailing" secondItem="NJE-Ly-5JI" secondAttribute="trailing" id="iV2-oI-ADf"/>
+                                    <constraint firstAttribute="bottom" secondItem="NJE-Ly-5JI" secondAttribute="bottom" id="zA0-rv-WgW"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pGR-UG-CT6">
+                                <rect key="frame" x="0.0" y="806.5" width="414" height="89.5"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="GpR-4J-YTo" firstAttribute="top" secondItem="imd-Do-Jjg" secondAttribute="bottom" id="1P6-yK-oXX"/>
+                            <constraint firstItem="GpR-4J-YTo" firstAttribute="leading" secondItem="pQ0-m7-7Of" secondAttribute="leading" id="1Rn-v3-Cxw"/>
+                            <constraint firstItem="pGR-UG-CT6" firstAttribute="height" secondItem="MKZ-qB-Rl8" secondAttribute="height" multiplier="0.1" id="3b5-dF-IQk"/>
+                            <constraint firstItem="pQ0-m7-7Of" firstAttribute="trailing" secondItem="imd-Do-Jjg" secondAttribute="trailing" id="9hj-Hk-spe"/>
+                            <constraint firstItem="pQ0-m7-7Of" firstAttribute="trailing" secondItem="GpR-4J-YTo" secondAttribute="trailing" id="NMC-fM-6w9"/>
+                            <constraint firstItem="imd-Do-Jjg" firstAttribute="top" secondItem="MKZ-qB-Rl8" secondAttribute="top" id="OmP-MA-X4O"/>
+                            <constraint firstAttribute="bottom" secondItem="pGR-UG-CT6" secondAttribute="bottom" id="PVv-mJ-Vhw"/>
+                            <constraint firstItem="imd-Do-Jjg" firstAttribute="leading" secondItem="pQ0-m7-7Of" secondAttribute="leading" id="R0j-ZE-Gzl"/>
+                            <constraint firstItem="pGR-UG-CT6" firstAttribute="top" secondItem="GpR-4J-YTo" secondAttribute="bottom" id="amt-Zc-FkN"/>
+                            <constraint firstItem="imd-Do-Jjg" firstAttribute="height" secondItem="MKZ-qB-Rl8" secondAttribute="height" multiplier="0.1" id="ofF-SF-ezi"/>
+                            <constraint firstItem="pQ0-m7-7Of" firstAttribute="trailing" secondItem="pGR-UG-CT6" secondAttribute="trailing" id="qJt-vU-zmK"/>
+                            <constraint firstItem="pGR-UG-CT6" firstAttribute="leading" secondItem="pQ0-m7-7Of" secondAttribute="leading" id="u9H-Nv-N4m"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="pQ0-m7-7Of"/>
                     </view>
+                    <connections>
+                        <outlet property="tablelView" destination="NJE-Ly-5JI" id="gCi-J6-Wtm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SIR-ct-AWa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="946" y="139"/>
+            <point key="canvasLocation" x="944.92753623188412" y="138.61607142857142"/>
         </scene>
     </scenes>
     <resources>
